--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,12 +1,12 @@
-<h1>This is a bunch of useless, so called Frequently Asked Questions'</h1>
+<h1>This is a bunch of useless, so called 'Frequently Asked Questions'</h1>
 <hr>
 <br>
-<h3>Q: How do I work this thing?</h3>
-<h3>A: It just works!</h3>
+<p>Q: How do I work this thing?</p>
+<p>A: Just think happy thoughts.</p>
 <br>
-<h3>Q: What is the meaning of the universe and everything?</h3>
-<h3>A: 42</h3>
+<p>Q: What is the meaning of life, the universe and everything?</p>
+<p>A: 42</p>
 <br>
-<h3>Q: What is that smell?</h3>
-<h3>A: Your body odour.</h3>
+<p>Q: What is that smell?</p>
+<p>A: Your body odour.</p>
 
