--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,3 +1,17 @@
-<%= link_to 'Home', root_path%>
-<%= link_to 'About', home_about_path%>
-<%= link_to 'FAQ', home_faq_path%>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <%= link_to 'Home', root_path%>
+                </li>
+                <li class="nav-item">
+                    <%= link_to 'About', home_about_path %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to 'FAQ', home_faq_path %>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
