--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<p>Yup! This is it alright!</p>
+<div class="jumbotron">
+    <h1>Welcome to my app</h1>
+    <p>It's crazy good.</p>
+    <%= link_to 'About Us', home_about_path, class: "btn btn-default" %>
+    <%= link_to 'Home', root_path, class: "btn btn-primary" %>
+</div>
