--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,9 +1,14 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg">
     <div class="container">
-        <div class="navbar-header">
-            <ul class="nav navbar-nav">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <%= link_to 'Uninterested', root_path, class: "navbar-brand" %>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <%= link_to 'Home', root_path%>
+                    <%= link_to 'Home', root_path %>
                 </li>
                 <li class="nav-item">
                     <%= link_to 'About', home_about_path %>
